# ebs-python-internship-test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: django_test.yml  docker-image.yml  test.yml
apps/blog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_auto_20230203_2022.py  0002_auto_20230727_1943.py  0002_blog_enabled.py  0003_alter_blog_body_alter_blog_category_alter_blog_slug.py  0003_auto_20230727_1959.py  0003_blogcomments.py  0003_comment.py  0003_comments.py  0004_alter_blog_category.py  0004_alter_blogcomments_blog.py  0004_comments_delete_comment.py  0004_comments_text.py  0005_alter_blog_category_comments.py  0005_alter_comments_blog.py  0005_rename_comments_comment.py  0006_alter_blog_enabled.py  0006_alter_comments_blog.py  0007_rename_text_comment_body.py
apps/comments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/common/: exceptions.py  helpers.py  middlewares.py  permissions.py  tests.py  urls.py  validators.py  views.py
apps/common/fixtures/: blogs.json  categories.json  comment.json  comments.json  initial_data.json  users.json
apps/users/: serializers.py  tests.py  urls.py  views.py
config/: base.py  development_sample.py  settings.py  urls.py  wsgi.py
demo/: README.md
devops/helm/: Chart.yaml  values.yaml
devops/helm/env/: values-dev.yaml
devops/helm/templates/: _helpers.tpl  deployment.yaml  image-registry-secret.yaml  ingress.yaml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ro/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
